[tool.poetry]
name = "kandji"
version = "0.1.0"
description = "A python wrapper for the Kandji API"
repository = "https://github.com/frefrik/python-kandji"
keywords = ["kandji", "api", "wrapper", "python"]
authors = ["Fredrik Haarstad <codemonkey@zomg.no>"]
license = "MIT"
packages = [
    { include = "kandji" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"
python-dotenv = "^0.21.0"
flake8 = "^5.0.4"

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.isort]
profile = "black"
skip_gitignore = true
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
